--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -145,30 +145,6 @@ ul.drag li.placeholder:before {
       }
     }
   }
-
-
-  //li {
-  //  //border-bottom:1px solid #dee2e6;
-  //  div{
-  //
-  //    border-left: 1px solid #ccc;
-  //    padding: 10px;
-  //  }
-  //
-  //
-  //
-  //
-  //    li{
-  //      list-style: none;
-  //
-  //      div{
-  //        display: inline-block;
-  //        width: 100%;
-  //        padding: 10px;
-  //        border: 1px solid #ccc;
-  //      }
-  //    }
-  //  }
 }
 
 
@@ -236,3 +212,12 @@ ul.drag li.placeholder:before {
   display: none;
 }
 
+.assign {
+  h3 {
+    font-style: 20px;
+  }
+
+  label{
+    font-weight: normal
+  }
+}
