--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -214,10 +214,20 @@ ul.drag li.placeholder:before {
 
 .assign {
   h3 {
-    font-style: 20px;
+    font-size: 20px;
   }
 
-  label{
-    font-weight: normal
+  div {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    display: flex;
+    flex-flow: wrap;
+
+    label{
+      font-weight: normal;
+      flex: 1 0 20%;
+
+    }
   }
+
 }
